--- a/users/templates/users/navbar.html
+++ b/users/templates/users/navbar.html
@@ -38,8 +38,8 @@
       {% endif %}
 
       <li class="nav-item active">
-        {% comment %} {% url 'logout' %} {% endcomment %}
-        <a class="nav-link" href="">Log Out</a>
+        
+        <a class="nav-link" href="{% url 'user_logout' %}">Log Out</a>
       </li>
       {% else %}
 
@@ -49,8 +49,8 @@
       </li>
       {% endif %}
       <li class="nav-item active">
-        {% comment %} {% url 'register' %} {% endcomment %}
-        <a class="nav-link" href="">Register</a>
+       
+        <a class="nav-link" href=" {% url 'register' %}">Register</a>
       </li>
     </ul>
   </div>
