--- a/users/templates/users/navbar.html
+++ b/users/templates/users/navbar.html
@@ -44,8 +44,8 @@
       {% else %}
 
       <li class="nav-item active">
-        {% comment %} {% url 'user_login' %} {% endcomment %}
-        <a class="nav-link" href="">Log In</a>
+        
+        <a class="nav-link" href=" {% url 'user_login' %} ">Log In</a>
       </li>
       {% endif %}
       <li class="nav-item active">
